--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQIiG6NJWxHlIsl17ZwqI_uRkbeKJuDMs&libraries=visualisation"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
@@ -14,8 +16,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-  </head>
-  <body>
+
+</head>
+
+<body>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -27,5 +31,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-  </body>
+</body>
+
 </html>
