--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQIiG6NJWxHlIsl17ZwqI_uRkbeKJuDMs&libraries=visualisation"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQIiG6NJWxHlIsl17ZwqI_uRkbeKJuDMs&libraries=visualisation" async defer></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
@@ -21,16 +21,6 @@
 
 <body>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start`.
-      To create a production bundle, use `npm run build`.
-    -->
 </body>
 
 </html>
