googleMap plugged again

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQIiG6NJWxHlIsl17ZwqI_uRkbeKJuDMs&libraries=visualisation" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQIiG6NJWxHlIsl17ZwqI_uRkbeKJuDMs&libraries=visualisation" ></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
